--- a/documentation/Mod_Template/manifest.json
+++ b/documentation/Mod_Template/manifest.json
@@ -1,9 +1,9 @@
 {
-    "name": "MOD NAME GOES HERE",
-    "description": "MOD DESCRIPTION GOES HERE",
+    "name": "Summer",
+    "description": ",",
     "developer":
     {
-        "name": "DEVELOPER NAME GOES HERE"
+        "name": "Drexflame"
     },
     "icons":
     {
@@ -17,10 +17,10 @@
         {
             "background_music":
             [
-                "music/track_1.mp3",
-                "music/track_2.mp3",
-                "music/track_3.mp3",
-                "music/track_4.mp3"
+                "SpongeBob Relaxing Music & Waves Ambience_XWsptjpzBW0.mp3",
+                "",
+                "",
+                ""
             ],
             "browser_sounds":
             {
